--- a/templates/info/average-times.tmpl
+++ b/templates/info/average-times.tmpl
@@ -25,7 +25,7 @@ $('document').ready(function(){
 	    alert('error');
 	})
 	.complete(function() {
-            oTable = $('#gradient-style').dataTable({
+            oTable = $('#average-times-table').dataTable({
             "bJQueryUI": true,
             "sPaginationType": "full_numbers",
             "bInfo": true,
