--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -39,13 +39,13 @@ $('document').ready(function(){
         "bAutoWidth": false
     });
 
-    $('#datatable_contacts tbody tr').live('mouseover mouseout', function (event) {
-        if (event.type == 'mouseover') {
-            $(this).addClass("ui-state-hover");
-        } else {
-            $(this).removeClass("ui-state-hover");
-        }
-    });
+//    $('#datatable_contacts tbody tr').live('mouseover mouseout', function (event) {
+//        if (event.type == 'mouseover') {
+//            $(this).addClass("ui-state-hover");
+//        } else {
+//            $(this).removeClass("ui-state-hover");
+//        }
+//    });
 
     // clicking the email address opens your default mailer (in a separate tab/window,
     // if your default mailer is a web-mail like GMail or Yahoo)
