--- a/templates/patrons/patrons.tmpl
+++ b/templates/patrons/patrons.tmpl
@@ -72,7 +72,7 @@ $('document').ready(function(){
 			"column": oTable.fnGetPosition( this )[2]
 		    };
         	},
-	        "height": "14px",
+//	        "height": "14px",
 	        "select": true
             } );
 
@@ -85,13 +85,13 @@ $('document').ready(function(){
 	});
 
 
-    $('#datatable_patrons tbody tr').live('mouseover mouseout', function (event) {
-        if (event.type == 'mouseover') {
-            $(this).addClass("ui-state-hover");
-        } else {
-            $(this).removeClass("ui-state-hover");
-        }
-    });
+//    $('#datatable_patrons tbody tr').live('mouseover mouseout', function (event) {
+//        if (event.type == 'mouseover') {
+//            $(this).addClass("ui-state-hover");
+//        } else {
+//            $(this).removeClass("ui-state-hover");
+//        }
+//    });
 
 });
 
