--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -35,7 +35,7 @@ $('document').ready(function() {
 
   set_secondary_tab("menu_lend_pull");
 
-  oTable = $('#gradient-style').dataTable({
+  oTable = $('#pull-list').dataTable({
          "bJQueryUI": true,
          "sPaginationType": "full_numbers",
          "bInfo": true,
@@ -76,7 +76,7 @@ $('document').ready(function() {
 
 
     <h3>Pull list</h3>
-    <table id="gradient-style">
+    <table id="pull-list">
       <thead>
 	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Requestor note</th><th>Your barcode for the requesting library</th></tr>
       </thead>
