--- a/templates/search/checkins.tmpl
+++ b/templates/search/checkins.tmpl
@@ -17,8 +17,7 @@ $('document').ready(function(){
                 //alert (data.checkins[0].id+" "+data.checkins[0].msg_from+" "+data.checkins[0].author+" "+data.checkins[0].title+" "+data.checkins[0].ts); //further debug
                 build_table(data);
 
-                //$('#gradient-style').dataTable();
-                oTable = $('#gradient-style').dataTable({
+                oTable = $('#checkins-table').dataTable({
                        "bJQueryUI": true,
                        "sPaginationType": "full_numbers",
                        "bInfo": true,
@@ -37,17 +36,21 @@ $('document').ready(function(){
 		           ]
         	       },
                        "aoColumns": [
-                           { "mDataProp": "gid" },
-                           { "mDataProp": "cid" },
-                           { "mDataProp": "ID" },
+                           { "mDataProp": "gid", "bVisible": false },
+                           { "mDataProp": "cid", "bVisible": false },
+                           { "mDataProp": "ID", "bVisible": false },
                            { "mDataProp": "Title" },
                            { "mDataProp": "Author" },
                            { "mDataProp": "Timestamp" },
                            { "mDataProp": "Back from" },
-                           { "mDataProp": "Back from (ID)" },
+                           { "mDataProp": "Back from (ID)", "bVisible": false },
                            { "mDataProp": "Check-in" }
-                      ]
-
+                      ],
+                      "fnInitComplete": function() {
+                           // this handles a bug(?) in this version of datatables;
+                           // hidden columns caused the table width to be set to 100px, not 100%
+                           $("#checkins-table").css("width","100%");
+                      }
                   });
            });
 
