--- a/templates/search/holds.tmpl
+++ b/templates/search/holds.tmpl
@@ -19,7 +19,7 @@ $('document').ready(function(){
                 build_table(data); 
 
                 //$('#gradient-style').dataTable();
-                oTable = $('#gradient-style').dataTable({
+                oTable = $('#holds-table').dataTable({
                        "bJQueryUI": true,
                        "sPaginationType": "full_numbers",
                        "bInfo": true,
@@ -38,19 +38,25 @@ $('document').ready(function(){
 		           ]
         	       },
                        "aoColumns": [
-                           { "mDataProp": "gid" },
-                           { "mDataProp": "cid" },
-                           { "mDataProp": "ID" },
+                           { "mDataProp": "gid", "bVisible": false },
+                           { "mDataProp": "cid", "bVisible": false },
+                           { "mDataProp": "ID", "bVisible": false },
                            { "mDataProp": "Title" },
                            { "mDataProp": "Author" },
                            { "mDataProp": "Patron / Group" },
                            { "mDataProp": "Timestamp" },
-                           { "mDataProp": "From ID" },
+                           { "mDataProp": "From ID", "bVisible": false },
                            { "mDataProp": "From" },
                            { "mDataProp": "Status" },
                            { "mDataProp": "Message" },
                            { "mDataProp": "Action" }
-                      ]
+                      ],
+                      "fnInitComplete": function() {
+                         // this handles a bug(?) in this version of datatables;
+                         // hidden columns caused the table width to be set to 100px, not 100% 
+                         $("#holds-table").css("width","100%");
+                      }
+
 
                   });
             });
