--- a/templates/search/overdue.tmpl
+++ b/templates/search/overdue.tmpl
@@ -18,8 +18,7 @@ $('document').ready(function(){
                 //alert (data.overdue[0].id+" "+data.overdue[0].title+" "+data.overdue[0].author+" "+data.overdue[0].ts+" "+data.overdue[0].due_date+" "+data.overdue[0].patron_barcode); //further debug
                 build_table(data);
 
-                //$('#gradient-style').dataTable();
-                oTable = $('#gradient-style').dataTable({
+                oTable = $('#overdue-table').dataTable({
                        "bJQueryUI": true,
                        "sPaginationType": "full_numbers",
                        "bInfo": true,
@@ -38,18 +37,22 @@ $('document').ready(function(){
 		           ]
         	       },
                        "aoColumns": [
-                           { "mDataProp": "gid" },
-                           { "mDataProp": "cid" },
-                           { "mDataProp": "ID" },
+                           { "mDataProp": "gid", "bVisible": false },
+                           { "mDataProp": "cid", "bVisible": false },
+                           { "mDataProp": "ID", "bVisible": false },
                            { "mDataProp": "Title" },
                            { "mDataProp": "Author" },
                            { "mDataProp": "Borrowed from" },
-                           { "mDataProp": "Borrowed from (ID)" },
+                           { "mDataProp": "Borrowed from (ID)", "bVisible": false },
                            { "mDataProp": "Timestamp" },
                            { "mDataProp": "Due date" },
                            { "mDataProp": "Patron" }
-                      ]
-
+                      ],
+                      "fnInitComplete": function() {
+                          // this handles a bug(?) in this version of datatables;
+                          // hidden columns caused the table width to be set to 100px, not 100%
+                          $("#overdue-table").css("width","100%");
+                      }
                   });
            });
 
