--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -17,8 +17,7 @@ $('document').ready(function(){
             function(data){
                 build_table(data);
 
-                //$('#gradient-style').dataTable();
-                oTable = $('#gradient-style').dataTable({
+                oTable = $('#shipping-table').dataTable({
                        "bJQueryUI": true,
                        "sPaginationType": "full_numbers",
                        "bInfo": true,
@@ -37,19 +36,23 @@ $('document').ready(function(){
 		           ]
         	       },
                        "aoColumns": [
-                           { "mDataProp": "gid" },
-                           { "mDataProp": "cid" },
-                           { "mDataProp": "ID" },
+                           { "mDataProp": "gid", "bVisible": false },
+                           { "mDataProp": "cid", "bVisible": false },
+                           { "mDataProp": "ID", "bVisible": false },
                            { "mDataProp": "From" },
-                           { "mDataProp": "From (ID)" },
+                           { "mDataProp": "From (ID)", "bVisible": false },
                            { "mDataProp": "Author" },
                            { "mDataProp": "Title" },
                            { "mDataProp": "Mailing address" },
                            { "mDataProp": "Timestamp" },
                            { "mDataProp": "Due date" },
                            { "mDataProp": "Response" }
-                      ]
-
+                      ],
+                      "fnInitComplete": function() {
+                           // this handles a bug(?) in this version of datatables;
+                           // hidden columns caused the table width to be set to 100px, not 100%
+                           $("#shipping-table").css("width","100%");
+                      }
                   });
 
            });
