--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -19,7 +19,7 @@ $('document').ready(function(){
                 build_table(data); 
 
                 //$('#gradient-style').dataTable();
-                oTable = $('#gradient-style').dataTable({
+                oTable = $('#unfilled-table').dataTable({
                        "bJQueryUI": true,
                        "sPaginationType": "full_numbers",
                        "bInfo": true,
@@ -38,9 +38,9 @@ $('document').ready(function(){
 		           ]
         	       },
                        "aoColumns": [
-                           { "mDataProp": "gid" },
-                           { "mDataProp": "cid" },
-                           { "mDataProp": "ID" },
+                           { "mDataProp": "gid", "bVisible": false },
+                           { "mDataProp": "cid", "bVisible": false },
+                           { "mDataProp": "ID", "bVisible": false },
                            { "mDataProp": "Title" },
                            { "mDataProp": "Author" },
                            { "mDataProp": "Patron / Group" },
@@ -51,7 +51,12 @@ $('document').ready(function(){
                            { "mDataProp": "# sources tried" },
                            { "mDataProp": "Total # sources" },
                            { "mDataProp": "Next lender?" }
-                      ]
+                      ],
+                      "fnInitComplete": function() {
+                         // this handles a bug(?) in this version of datatables;
+                         // hidden columns caused the table width to be set to 100px, not 100% 
+                         $("#unfilled-table").css("width","100%");
+                      }
 
                   });
             });
