missed one table

--- a/templates/search/new_patron_requests.tmpl
+++ b/templates/search/new_patron_requests.tmpl
@@ -17,7 +17,7 @@ $('document').ready(function(){
 
                 build_table(data); 
 
-                oTable = $('#gradient-style').dataTable({
+                oTable = $('#new-patron-requests-table').dataTable({
                        "bJQueryUI": true,
                        "sPaginationType": "full_numbers",
                        "bInfo": true,
