missed one bugfix

--- a/templates/search/new_patron_requests.tmpl
+++ b/templates/search/new_patron_requests.tmpl
@@ -44,7 +44,13 @@ $('document').ready(function(){
                            { "mDataProp": "Author" },
                            { "mDataProp": "Medium" },
                            { "mDataProp": "Actions" }
-                      ]
+                      ],
+                     "fnInitComplete": function() {
+                           // this handles a bug(?) in this version of datatables;
+                           // hidden columns caused the table width to be set to 100px, not 100%
+                           $("#new-patron-requests-table").css("width","100%");
+                     }
+
 
                   });
             });
