--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -76,7 +76,7 @@ $('document').ready(function(){
 
 <div id="center" role="main">
 
-    <div id="myDiv"><br/>      Loading... <img src="/wait.gif">
+    <div id="waitDiv"><br/>      Loading... <img src="/wait.gif">
     </div>
 
     <div id="myDiv">
