nag update border bottom fix

--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -31,7 +31,7 @@
   width: 100%;
   margin: 0em;
   font-size: 1.4em;
-  border-bottom: #4373a1 solid 5px;
+  border-bottom: #6a99c9 solid 5px;
 }
 
 #lib-nav ul
