--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -79,7 +79,7 @@ $('document').ready(function(){
     <div id="waitDiv"><br/>      Loading... <img src="/wait.gif">
     </div>
 
-    <div id="myDiv">
+    <div id="myDiv"><br />
       <h3>Unfilled: the lending libraries were unable to fill these requests</h3>
       <div id="mylistDiv"></div>
     </div>
