--- a/templates/search/request_placed.tmpl
+++ b/templates/search/request_placed.tmpl
@@ -35,7 +35,7 @@
     </TMPL_IF>
 
     <br/>
-    <table>
+    <table id="fill-table" class="table-width-lib">
       <tr><td>Requesting user</td><td>: <TMPL_VAR NAME="username"></td></tr>
       <tr><td>Title</td><td>: <TMPL_VAR NAME="title"></td></tr>
       <tr><td>Author</td><td>: <TMPL_VAR NAME="author"></td></tr>
