current bug fix

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -371,7 +371,7 @@ $('document').ready(function(){
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="dialog-form" title="Change due date">
+    <div id="dialog-form" title="Change due date"><br>
       <p class="validateTips">Enter the due date as YYYY-MM-DD</p>
 
 <!--  <form>  -->
@@ -382,6 +382,7 @@ $('document').ready(function(){
 <!--  </form>  -->
 
     </div>
+    <div class="clear"> </div>
 <br />
     <div id="tabs">
       <ul>
