--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -8,6 +8,7 @@ $.ajaxSetup ({
 });  
 
 $('document').ready(function(){
+    set_primary_tab("menu_current");
 
     // This is the bit that makes TableTools work on tabs
     // (from https://github.com/DataTables/TableTools/blob/master/tabs.html)
