--- a/templates/search/history.tmpl
+++ b/templates/search/history.tmpl
@@ -10,6 +10,7 @@ $.ajaxSetup ({
 });  
 
 $('document').ready(function(){
+    set_primary_tab("menu_history");
 
     $(function() {
         var dateStart = moment();
