--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -367,12 +367,12 @@ $('document').ready(function(){
 
 
 <div id="center" role="main">
-
+<div>
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
     </div>
 
-    <div id="dialog-form" title="Change due date"><br>
+    <div id="dialog-form" title="Change due date">
       <p class="validateTips">Enter the due date as YYYY-MM-DD</p>
 
 <!--  <form>  -->
@@ -383,7 +383,7 @@ $('document').ready(function(){
 <!--  </form>  -->
 
     </div>
-    <div class="clear"> </div>
+</div>
 <br />
     <div id="tabs">
       <ul>
