--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -125,7 +125,7 @@ $('document').ready(function(){
 </div>
 
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
-<nav role="navigation" id="lib-nav">
+<nav role="navigation">
   <ul class="lib-nav-primary inline-items">
     <li><a id="menu_borrow" href="/cgi-bin/lightning.cgi?rm=lightning_search_form">Borrowing</a></li>
     <li><a id="menu_lend" href="/cgi-bin/lightning.cgi?rm=pull_list">Lending</a></li>
