--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -94,8 +94,8 @@
 </header>
     
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
-<nav role="navigation">
-  <ul class="nav inline-items">
+<nav role="navigation" id="pub-nav-primary">
+  <ul class="inline-items">
     <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">Home</a></li>
     <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li>
     <li><a id="menu_current" href="/cgi-bin/public.cgi?rm=current_form">Current Borrowing</a></li>
