--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -125,8 +125,8 @@ $('document').ready(function(){
 </div>
 
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
-<nav role="navigation">
-  <ul class="lib-nav-primary inline-items">
+<nav role="navigation" id="lib-nav-primary">
+  <ul class="inline-items">
     <li><a id="menu_borrow" href="/cgi-bin/lightning.cgi?rm=lightning_search_form">Borrowing</a></li>
     <li><a id="menu_lend" href="/cgi-bin/lightning.cgi?rm=pull_list">Lending</a></li>
     <li><a id="menu_current" href="/cgi-bin/lightning.cgi?rm=current">Current</a></li>
