--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -112,7 +112,7 @@
   </header>
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
-  <nav role="navigation" id="lib-nav-primary">
+  <nav role="navigation" id="pub-nav-primary">
     <ul class="inline-items">
       <li><a id="menu_search" href="/cgi-bin/public.cgi?rm=search_form">Home</a></li>
       <li><a id="menu_myaccount" href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li>
